<resources>
    <string name="app_name">Bender Game</string>
    <string name="main_title">Bender Game</string>
    <string name="game_id">IDs de la partie</string>
    <string name="create_game">Créer une partie</string>
    <string name="confirm_join">Confirmer</string>
    <string name="choose_mode">Choix du mode</string>
    <string name="mode_remainder">Aide-mémoire</string>
    <string name="mode_no_real_dice">Sans dés réels</string>
    <string name="dialog_title">Aide</string>
    <string name="dialog_message">
        <b>Aide-mémoire</b>\n\nL\'application sert à enregistrer les règles au fur et à mesure du jeu, et à déterminer quelle règle doit être appliquée lorsqu\'une combinaison de dés est lancée.\n\n\n<b>Sans dés réels</b>\n\nL\'application simule des lancers de dés. Les fonctions du mode aide-mémoire s\'appliquent toujours (à n\'utiliser que si les joueurs n\'ont pas de vrais dés).\n\n<b>Un seul téléphone</b>\n\nLe téléphone est placé au centre de la table, et simule les lancers de dés. Les actions seront affichées automatiquement.
    </string>
    <string name="confirm_create">confirmer</string>
    <string name="mode_only_one_phone">Un seul téléphone</string>
    <string name="prefix_generated_id">ID de la partie : %1$s</string>
    <string name="error_mandatory_field">Ce champ est obligatoire</string>
    <string name="error_invalid_game_ID">Cet identifiant n\'existe pas</string>
    <string name="current_rules">Règles actuelles</string>
    <string name="pattern_matcher">Vérificateur</string>
    <string name="title_activity_game_remainder_mode">Bender Game (aide-mémoire)</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_game_no_real_dice_mode">GameNoRealDiceMode</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_current_rules">Règles</string>
    <string name="title_tab_dice_checker">Vérificateur</string>
    <string name="title_card_dice_checker">Vérificateur d\'actions</string>
    <string name="dice_checker_help_dialog">Entrez la valeur des dés jetés pour déterminer les actions à effectuer.</string>
    <string name="dice_checker_help_title">Vérificateur de dés</string>
    <string name="result">Résultat</string>
    <string name="prefix_condition_contains_1">Les dés contiennent un %1$d</string>
    <string name="prefix_condition_contains_2">Les dés contiennent un %1$d et un %2$d</string>
    <string name="prefix_condition_contains_3">Les dés contiennent un %1$d, un %2$d et un %3$d</string>
    <string name="prefix_condition_contains_4">Les dés contiennent un %1$d, un %2$d, un %3$d et un %4$d</string>
    <string name="prefix_condition_quadruple">Quadruple %1$d</string>
    <string name="prefix_condition_sum_equal">La somme totale vaut %1$d</string>
    <string name="prefix_condition_sum_equal_or_below">La somme totale vaut %1$d ou moins</string>
    <string name="prefix_condition_sum_equal_or_greater">La somme vaut %1$d ou plus</string>
    <string name="prefix_condition_triple">Triple %1$d</string>
    <string name="prefix_condition_small_flush">Petite suite</string>
    <string name="prefix_condition_any_quadruple">Quadruple</string>
    <string name="prefix_condition_any_triple">Triple</string>
    <string name="prefix_condition_big_flush">Grande suite</string>
    <string name="prefix_condition_small_flush_starting_with">Petite suite commençant par un %1$d</string>
    <string name="prefix_condition_big_flush_starts_with">Grande suite commençant par un %1$d</string>
    <string name="prefix_condition_any_double">Double</string>
    <string name="prefix_condition_double">Double %1$d</string>
    <string name="prefix_condition_any_double_double">Double et double</string>
    <string name="prefix_condition_double_double">Double %1$d et double %2$d</string>
    <string name="action_add_rule">Ajouter une règle</string>
    <string name="prefix_condition_double_and_any">Double %1$d et un autre double</string>
    <string name="confirm_create_new_rule">Oui !</string>
    <string name="cancel">Annuler</string>
    <string name="add_rule_title">Ajouter une règle</string>
    <string name="rule_title">Titre de la règle</string>
    <string name="type_sum_equal_short_descr">Somme totale</string>
    <string name="type_sum_equal_or_below_short_descr">Somme inf. ou égale</string>
    <string name="type_sum_equal_or_greater_descr">Somme sup. ou égale</string>
    <string name="type_contains_short_descr">Les dés contiennent …</string>
    <string name="type_double_short_descr">Double</string>
    <string name="type_double_double_short_descr">Double et double</string>
    <string name="type_triple_short_descr">Triple</string>
    <string name="type_quadruple_short_descr">Quadruple</string>
    <string name="type_small_flush_short_descr">Petite suite</string>
    <string name="type_great_flush_short_descr">Grande suite</string>
    <string name="step_rule_name_header">Titre de la règle</string>
    <string name="step_rule_name_details">Donnez un titre à la règle pour la reconnaître facilement.</string>
    <string name="step_rule_type_header">Type de la règle</string>
    <string name="step_rule_type_details">Choisissez le type de condition qui déclenchera l\'action.</string>
    <string name="step_rule_value_header">Valeur de la condition</string>
    <string name="step_rule_value_details">Donnez la valeur des dés pour compléter la condition précédente.</string>
    <string name="generate_rule">Générer automatiquement</string>
    <string name="default_dice_value">N\'importe quoi</string>
    <string name="rule_preview">Aperçu de la règle :</string>
    <string name="step_rule_outcome_header">Action à réaliser</string>
    <string name="step_rule_outcome_details">Décrivez l\'action qui doit être réalisée si la condition est satisfaite.</string>
    <string name="rule_outcome">Action</string>
    <string name="placeholder_text_rules">Cliquez sur le \"+\" pour ajouter une règle !</string>
    <string name="generate_other">Une autre</string>
    <string name="generate_rule_title">Règle aléatoire</string>

    <string name="default_rule_invent_rule">Le lanceur invente une règle</string>
    <string name="default_rule_cancel_rule">Le lanceur invente ou annule une règle</string>
    <string name="default_rule_all_drink">Tout le monde affone sauf le lanceur</string>
    <string name="default_rule_thrower_drinks">Le lanceur affone</string>

    <string name="default_rule_invent_rule_title">Invention d\'une règle</string>
    <string name="default_rule_cancel_rule_title">Invention ou annulation d\'une règle</string>
    <string name="default_rule_all_drink_title">Plus de 21</string>
    <string name="default_rule_thrower_drinks_title">Moins de 8</string>
    <string name="action_delete_rule">Supprimer une règle</string>
    <string name="action_rule_deleted">Règle supprimée</string>
    <string name="action_undo">Annuler</string>
    <string name="prefix_condition_sum_even">La somme des dés est un chiffre pair</string>
    <string name="prefix_condition_sum_odd">La somme des dés est un chiffre impair</string>
    <string name="type_sum_even_short_descr">Somme paire</string>
    <string name="type_sum_odd_short_descr">Somme impaire</string>
</resources>
